[tool.poetry]
name = "decorator_validation"
version = "3.0.4"
description = "Fast Argument validation for functions using decorators"
authors = ["FailedRobot <sry@nomail.com>"]
homepage = "https://github.com/ahartlba/decorator_validation"
readme = "README.md"
packages = [{include = "decorator_validation"}]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
